fix: fixed close button's z-index

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -95,6 +95,7 @@ figure {
 
 figure img {
   border-radius: 6px;
+  height: 100%;
 }
 
 figcaption {
@@ -133,6 +134,7 @@ figcaption {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  z-index: 1;
 }
 
 .popup .content {
